:thumbsup:README 修正

--- a/get_policy_number_list/serverless.yml
+++ b/get_policy_number_list/serverless.yml
@@ -11,3 +11,11 @@ plugins:
 functions:
   get-policy-number-list:
     handler: app.lambda_handler
+    events:
+      - http:
+          path: /
+          method: get
+          integration: lambda
+          request:
+            template:
+              application/json: '{ "user_id" : "$input.params("password")" }'
